--- a/project/Lesson1/index.html
+++ b/project/Lesson1/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8"/>
 	<title>FE Online2 Tech Skills Markup Lesson 1</title>
 	<link href="/home/elhe/Рабочий стол/foto.jpg" rel="icon" type="image/ico">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div> <!--Подложка-->
 		<div class="central"> <!--Средняя часть-->
 			<div class="name"><h4>Христюк Надежда Витальевна</h4></div><!-- Заголовок -->	
-			<div class="foto"><img src="foto.jpg" width="20%" height="20%" alt="тут моё фото";></div> <!-- фото -->
+			<div class="foto"><img src="https://pp.vk.me/c628831/v628831598/14088/s-OdZLBQsLk.jpg" height="50%" width="50%" alt="тут моё фото";></div> <!-- фото -->
 			<p class="status">Студент ИПСА</p> <!--Статус -->
 
 			<p class="text">Хочу учить фронтенд, потому что:</p>
