--- a/project/Lesson3/Index.html
+++ b/project/Lesson3/Index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 	<div class="central"> 
-	<div class="ups">
 		<div class="header"><img src="img/1.jpg" alt="logo";></div>
 		<ul class="Top_memu">														<!-- Блок с пунктами -->
 			<li class="T_m">Главная</li>
@@ -32,13 +31,15 @@
 			<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 			</div>
 		</div>
-		<ul class="Bottom_memu">														<!-- Блок с пунктами -->
+		<div class="Bottom_memu">
+		<ul>														<!-- Блок с пунктами -->
 			<li class="B_m">Главная</li>
 			<li class="B_m">Товары</li>
 			<li class="B_m">О_нас</li>
 			<li class="B_m">Контакты</li>
-			<li class="B_m"><div class="copypast">2014 &copy; All rights reserved</div></li>
 		</ul>
+			<div class="copypast">2014 &copy; All rights reserved</div>
+		</div>
 	</div>
 </div>
 </body>
