--- a/project/Lesson3/Index.html
+++ b/project/Lesson3/Index.html
@@ -37,8 +37,8 @@
 			<li class="B_m">Товары</li>
 			<li class="B_m">О_нас</li>
 			<li class="B_m">Контакты</li>
+			<li class="B_m"><div class="copypast">2014 &copy; All rights reserved</div></li>
 		</ul>
-			<div class="copypast">2014 &copy; All rights reserved</div>
 		</div>
 	</div>
 </div>
