--- a/project/Lesson3/Index.html
+++ b/project/Lesson3/Index.html
@@ -32,13 +32,13 @@
 			</div>
 		</div>
 		<div class="Bottom_memu">
-		<ul>														<!-- Блок с пунктами -->
-			<li class="B_m">Главная</li>
-			<li class="B_m">Товары</li>
-			<li class="B_m">О_нас</li>
-			<li class="B_m">Контакты</li>
-			<li class="B_m"><div class="copypast">2014 &copy; All rights reserved</div></li>
-		</ul>
+			<ul>														<!-- Блок с пунктами -->
+				<li class="B_m">Главная</li>
+				<li class="B_m">Товары</li>
+				<li class="B_m">О_нас</li>
+				<li class="B_m">Контакты</li>
+			</ul>
+			<div class="copypast">2014 &copy; All rights reserved</div>
 		</div>
 	</div>
 </div>
