--- a/project/Lesson4/Index.html
+++ b/project/Lesson4/Index.html
@@ -6,12 +6,85 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="central">
-<div class='contacts'>
-	<p>Наши контакты:</p>
+	<div class="central">
+		<div class="logo">
+			<a href="#"><img src="img/2.png" alt="Logo"></a>
+		</div>
+		<div class='Contacts'>
+			<p>Наши контакты:</p>
+			<p>+9-098-765-43-21</p>
+			<p>+9-0123-456-890</p>
+			<p>info@asia-holidays.com</p>
+		</div>
+		<ul class="Country">														
+			<li><a href="#"><img src="img/indiya.png" alt="indiya">Индия</a></li>
+			<li><a href="#"><img src="img/nepal.png" alt="nepal">Непал</a></li>
+			<li><a href="#"><img src="img/tibet.png" alt="tibet">Тибет</a></li>
+			<li><a href="#"><img src="img/butan.png" alt="indiya">Бутан</a></li>
+			<li><a href="#"><img src="img/sri-lanka.png" alt="indiya">Шри-ланка</a></li>
+			<li><a href="#"><img src="img/maldiv.png" alt="maldiv">Мальдивы</a></li>
+		</ul>
+		<div class="img"><img src="img/1.jpg" alt="img"></div>
 
-</div>
-</div>
+		<nav id="primary_nav_wrap">
+			<ul>
+				<li class="current-menu-item"><a href="#">Главная</a></li>
+				<li class="arrow"><a href="#">Путешествие
+
+				</a>
+					<ul>
+						<li><a href="#">Sub Menu 1</a></li>
+						<li><a href="#">Sub Menu 2</a></li>
+						<li><a href="#">Sub Menu 3</a></li>
+						<li><a href="#">Sub Menu 4</a>
+							<ul>
+								<li><a href="#">Deep Menu 1</a>
+									<ul>
+										<li><a href="#">Sub Deep 1</a></li>
+										<li><a href="#">Sub Deep 2</a></li>
+										<li><a href="#">Sub Deep 3</a></li>
+										<li><a href="#">Sub Deep 4</a></li>
+									</ul>
+								</li>
+								<li><a href="#">Deep Menu 2</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Sub Menu 5</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Услуги</a>
+					<ul>
+						<li><a href="#">Sub Menu 1</a></li>
+						<li><a href="#">Sub Menu 2</a></li>
+						<li><a href="#">Sub Menu 3</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Партнерам</a>
+					<ul>
+						<li class="dir"><a href="#">Sub Menu 1</a></li>
+						<li class="dir"><a href="#">Sub Menu 2 THIS IS SO LONG IT MIGHT CAUSE AN ISSEUE BUT MAYBE NOT?</a>
+							<ul>
+								<li><a href="#">Category 1</a></li>
+								<li><a href="#">Category 2</a></li>
+								<li><a href="#">Category 3</a></li>
+								<li><a href="#">Category 4</a></li>
+								<li><a href="#">Category 5</a></li>
+							</ul>
+						</li>
+						<li><a href="#">Sub Menu 3</a></li>
+						<li><a href="#">Sub Menu 4</a></li>
+						<li><a href="#">Sub Menu 5</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Отзывы клиентов</a></li>
+				<li><a href="#">О_Нас</a></li>
+				<li><a href="#">Контакты</a></li>
+				
+			</ul>
+		</nav>
+
+		</div>
+		<div class="copyrights"> Copyright(C) asia-holidays.com 2010</div>
 	
 </body>
 </html>
