--- a/project/Lesson4/Index.html
+++ b/project/Lesson4/Index.html
@@ -12,9 +12,9 @@
 		</div>
 		<div class='Contacts'>
 			<p>Наши контакты:</p>
-			<p>+9-098-765-43-21</p>
-			<p>+9-0123-456-890</p>
-			<p>info@asia-holidays.com</p>
+			<p><a href="skype:+90987654321?call">+9-098-765-43-21</a></p>
+			<p><a href="skype:+90123456890?call">+9-0123-456-890</a></p>
+			<p><a href="mailto:info@asia-holidays.com"> info@asia-holidays.com </a></p>
 		</div>
 		<ul class="Country">														
 			<li><a href="#"><img src="img/indiya.png" alt="indiya">Индия</a></li>
@@ -25,66 +25,81 @@
 			<li><a href="#"><img src="img/maldiv.png" alt="maldiv">Мальдивы</a></li>
 		</ul>
 		<div class="img"><img src="img/1.jpg" alt="img"></div>
-
-		<nav id="primary_nav_wrap">
-			<ul>
-				<li class="current-menu-item"><a href="#">Главная</a></li>
-				<li class="arrow"><a href="#">Путешествие
-
-				</a>
-					<ul>
-						<li><a href="#">Sub Menu 1</a></li>
-						<li><a href="#">Sub Menu 2</a></li>
-						<li><a href="#">Sub Menu 3</a></li>
-						<li><a href="#">Sub Menu 4</a>
-							<ul>
-								<li><a href="#">Deep Menu 1</a>
-									<ul>
-										<li><a href="#">Sub Deep 1</a></li>
-										<li><a href="#">Sub Deep 2</a></li>
-										<li><a href="#">Sub Deep 3</a></li>
-										<li><a href="#">Sub Deep 4</a></li>
-									</ul>
-								</li>
-								<li><a href="#">Deep Menu 2</a></li>
-							</ul>
-						</li>
-						<li><a href="#">Sub Menu 5</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Услуги</a>
-					<ul>
-						<li><a href="#">Sub Menu 1</a></li>
-						<li><a href="#">Sub Menu 2</a></li>
-						<li><a href="#">Sub Menu 3</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Партнерам</a>
-					<ul>
-						<li class="dir"><a href="#">Sub Menu 1</a></li>
-						<li class="dir"><a href="#">Sub Menu 2 THIS IS SO LONG IT MIGHT CAUSE AN ISSEUE BUT MAYBE NOT?</a>
-							<ul>
-								<li><a href="#">Category 1</a></li>
-								<li><a href="#">Category 2</a></li>
-								<li><a href="#">Category 3</a></li>
-								<li><a href="#">Category 4</a></li>
-								<li><a href="#">Category 5</a></li>
-							</ul>
-						</li>
-						<li><a href="#">Sub Menu 3</a></li>
-						<li><a href="#">Sub Menu 4</a></li>
-						<li><a href="#">Sub Menu 5</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Отзывы клиентов</a></li>
-				<li><a href="#">О_Нас</a></li>
-				<li><a href="#">Контакты</a></li>
-				
-			</ul>
-		</nav>
-
+		<ul class="menu clearfix">
+			<li >
+				<a href="#">Главная</a>
+			</li>
+			<li >				
+				<ul>
+					<li><a href="#">Путешествие 1</a></li>
+					<li><a href="#">Путешествие 2</a></li>
+					<li><a href="#">Путешествие 3</a></li>
+					<li><a href="#">Путешествие 4</a></li>
+					<li><a href="#">Путешествие 5</a></li>
+				</ul>
+				<a href="#">Путешествие &#x25BF;</a>
+			</li>
+			<li>
+				<a href="#">Услуги &#x25BF;</a>
+			</li>
+			<li>
+				<a href="#">Партнерам &#9663</a>
+			</li>
+			<li>
+				<a href="#">Отзывы клиентов</a>
+			</li>
+			<li>
+				<a href="#">О_Нас</a>
+			</li>
+			<li>
+				<a href="#">Контакты</a>
+			</li>				
+		</ul>
+		<div class="fon3"> <!-- фон для правой колонки (желтый) -->
+			<div class="fon2"> <!-- фон для центральной колонки (красный)-->
+				<div class="fon1"> <!-- фон для левой колонки (синий) -->
+					<div class="leftColumn">
+						<p id="h2">Информация</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>  								
+					</div>
+					<div class="centerColumn">
+						.
+					</div>
+					<div class="rightColumn">
+					<p id="h2">Новости</p>
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p> 
+						<p>Lorem ipsum dolor sit amet</p>
+						<p>Lorem ipsum dolor sit amet</p>						 						
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="copyrights"> Copyright(C) asia-holidays.com 2010</div>
-	
+	</div>
+	<div class="copyrights"> Copyright(C) asia-holidays.com 2010</div>
 </body>
 </html>
