--- a/project/Lesson4/Index.html
+++ b/project/Lesson4/Index.html
@@ -37,13 +37,13 @@
 					<li><a href="#">Путешествие 4</a></li>
 					<li><a href="#">Путешествие 5</a></li>
 				</ul>
-				<a href="#">Путешествие &#x25BF;</a>
+				<a href="#">Путешествие</a>
 			</li>
 			<li>
-				<a href="#">Услуги &#x25BF;</a>
+				<a href="#">Услуги</a>
 			</li>
 			<li>
-				<a href="#">Партнерам &#9663</a>
+				<a href="#">Партнерам</a>
 			</li>
 			<li>
 				<a href="#">Отзывы клиентов</a>
