--- a/project/javascript/Home_work_1_1/Index.html
+++ b/project/javascript/Home_work_1_1/Index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>js_01-01</title>
 	
-<script type="text/javascript" src="/home/elhe/project/javascript/Home_work_1_1/js/main.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 </head>
 <body>
